--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -10,10 +10,13 @@ body {
 	padding: 10px;
 	color: blueviolet;
 	font-size: 26px;
+	font-weight: 700;
+	font-style: italic;
 	margin-bottom: 20px;
 	border-bottom: 1px solid rgb(74, 74, 74);
 	border-radius: 0 0 15px 15px;
 	background-color: beige;
+	letter-spacing: 10px;
 }
 
 .Calculator {
@@ -36,7 +39,7 @@ body {
 .Display {
 	display: flex;
 	flex-direction: row-reverse;
-	margin: 10px 0 20px 0;
+	margin: 10px 0 40px 0;
 	padding: 5px 20px;
 	font-size: 25px;
 	font-weight: 700;
@@ -46,7 +49,59 @@ body {
 	border-radius: 30px;
 }
 
+.Clear {
+	width: 300px;
+	height: 50px;
+	border: 0.1px solid rgb(74, 74, 74);
+	border-radius: 15px;
+	margin-bottom: 20px;
+	font-weight: 600;
+}
+
 .TwoBox {
+	margin: 10px 30px 0 30px;
 	display: flex;
+	flex: 4 1;
 	gap: 20px;
+}
+
+button {
+	border: 0.1px solid rgb(74, 74, 74);
+	border-radius: 5px;
+	width: 50px;
+	height: 50px;
+}
+
+.Numbers {
+	margin: 10px 10px 0 10px;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	gap: 20px;
+}
+
+.Number {
+	font-size: 20px;
+}
+
+.Operators {
+	margin-right: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
+
+.Operator {
+	font-size: 20px;
+	color: rgb(29, 29, 29);
+}
+
+.Result {
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 300px;
+	height: 50px;
+	font-size: 35px;
 }
